kubernetes/external-applications/unifi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: unifi
  namespace: external-applications
spec:
  type: ExternalName
  ports:
  - name: https
    port: 443
  externalName: 10.0.0.1
