kubernetes/external-applications/unifi/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  namespace: external-applications
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.local.syspawn.com`)
      kind: Rule
      services:
        - name: unifi
          port: 443
  tls:
    secretName: local-syspawn-com-tls
